# lamr

./: .editorconfig  .gitignore  .lamrrc  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  bootstrap.sh  bumpver.toml  pyproject.toml
include/: Common.mk  Docker.mk  Kubernetes.mk  Python.mk
src/: lamr.py
