[tool.poetry]
name = "lamr"
version = "0.1.0"
description = "Simple shared makefile management tool"
authors = ["Edvard Majakari <edvard@majakari.net>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^24.3"
autoflake = "^1.4"
isort = "^5.9.3"
bumpver = "^2021.1113"
pre-commit = "^2.14.0"
pytest-timeout = "^1.4.2"
pylint = "^2.9.6"
pytest-cov = "^2.12.1"
pyupgrade = "^2.23.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
